--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="icon" href="images/new-year.png">
 </head>
 <body>
-    
+    <header>
+        <div class="banner-container">
+            <div class="banner-details">
+                <h1 class="title">All Thinks Are <br>Possible If You believe</h1>
+                <p>There are many variations of passages of Lorem <br>Ipsum available, but the majority have suffered <br>alteration in some form, by injected humour, <br>or randomised words</p>
+                <div>
+                    <button class="btn-primary">Contact Us</button>
+                </div>
+
+            </div>
+
+        </div>
+    </header>
 </body>
 </html>
