--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="images/new-year.png">
 </head>
 <body>
-    <header>
-        <div class="banner-container">
+    <section>
+        <div class="top-banner">
             <div class="banner-details">
                 <h1 class="title">All Thinks Are <br>Possible If You believe</h1>
                 <p>There are many variations of passages of Lorem <br>Ipsum available, but the majority have suffered <br>alteration in some form, by injected humour, <br>or randomised words</p>
@@ -21,6 +21,23 @@
             </div>
 
         </div>
-    </header>
+    </section>
+    <section class="My failures">
+        <div class="left">
+            <img src="images/person.png" alt="">
+        </div>
+        <div class="right">
+            <h2>My failures of previous year</h2>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul class="type">
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+        </div>
+
+    </section>
 </body>
 </html>
